<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="connect_with_twitter">Connect with Twitter</string>
    <string name="view_profile">View Profile</string>
    <string name="compose_tweet">Compose Tweet</string>
    <string name="tweet">Tweet</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="_0">0</string>
    <string name="loading">Loading...</string>
    <string name="search">Search</string>

</resources>