<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:minHeight="300dp"
    android:minWidth="200dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:id="@+id/rlComposeHeader">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close"
            android:id="@+id/ivClose"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitXY"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@id/ivProfileImage"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/svCompose"
        android:layout_below="@+id/rlComposeHeader"
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:layout_height="150dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etCompose"
            android:background="@null"
            android:hint="@string/what_s_happening" />
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWordCount"
            android:layout_toLeftOf="@+id/btnSubmit"
            android:layout_toStartOf="@+id/btnSubmit"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:text="@string/_0"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/btnSubmit"
            android:text="@string/tweet"/>
    </RelativeLayout>
</RelativeLayout>